Fixed: footer flickering issue

--- a/farm-fresh/resources/sass/style.scss
+++ b/farm-fresh/resources/sass/style.scss
@@ -220,6 +220,7 @@ a.btn:hover {
         display: inline-block;
         margin: 20px;
         margin-bottom: 0;
+        border-bottom: 2px solid transparent;
 
         a {
             padding: 4px;
@@ -231,12 +232,8 @@ a.btn:hover {
 
     li:hover,
     li.active {
-        border-bottom: 2px solid;
+        border-bottom: 2px solid #000;
     }
-}
-
-#footer_nav ul {
-    min-height: 53px;
 }
 
 .termslist {
